--- a/src/CRUD-Inicial/Collabby.web/appsettings.json
+++ b/src/CRUD-Inicial/Collabby.web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CadenaSQL": "Data Source=(local)\\SQLEXPRESS;Initial Catalog=DBCollabby;Integrated Security=True;Trusted_connection=True;TrustServerCertificate=True;"
+  }
 }
