Final DB, Migrations and Views
se hicieron ajustes finales en la DB se crearon vistas, tablas y contenido para la web, se esta configurando todo lo que tiene que ver con el cuerpo HTML y la logica de la pagina

--- a/src/CRUD-Inicial/Collabby.web/appsettings.json
+++ b/src/CRUD-Inicial/Collabby.web/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "CadenaSQL": "Data Source=(local)\\SQLEXPRESS;Initial Catalog=DBCollabby;Integrated Security=True;Trusted_connection=True;TrustServerCertificate=True;"
+    "CadenaSQL": "Data Source=(local)\\SQLEXPRESS1ER;Initial Catalog=DBCollabby;Integrated Security=True;Trusted_connection=True;TrustServerCertificate=True;"
   }
 }
